2008-12-29  Claude Paroz  <claude@2xlibre.net>

	* vertimus/forms.py: Fix clean_file when there is no file.
	* vertimus/tests/__init__.py: Add test when no file is submitted.

2008-12-29  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* templates/release_detail.html: Fixed UI URL.

2008-12-29  Claude Paroz  <claude@2xlibre.net>

	* common/views.py: Copy msgs function parameter before using it, 
	unless the content appended to it persist between calls.

2008-12-29  Claude Paroz  <claude@2xlibre.net>

	* stats/utils.py: Allow raw data as input for run_shell_command, piped
	through stdin. Useful for data in memory and not saved in the file system.
	* vertimus/tests/__init__.py: Add test with valid and not valid po file
	submission.
	* vertimus/tests/valid_po.po: Valid po file for tests.
	* vertimus/views.py:
	* vertimus/forms.py: ActionForm moved from view to forms. Add clean_file
	to check validity of po file submitted through the form. 

2008-12-29  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* common/views.py:
	* languages/views.py:
	* stats/forms.py:
	* stats/models.py:
	* teams/models.py: has_key is deprecated since Python 2.5. 

2008-12-29  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py:
	* stats/utils.py: Replace commands.* by more modern subprocess.* Run each
	shell command through new function utils.run_shell_command.

2008-12-27  Claude Paroz  <claude@2xlibre.net>

	* languages/views.py: Add select_related to reduce db access.
	* stats/models.py: Name related table unless 'language' is not fetched as
	it is a null=True relation.
	* teams/models.py: Add custom manager and add a method to fetch teams with
	roles prefilled. This dramatically reduces db access.
	* teams/views.py: Use new TeamManager function to fetch teams.

2008-12-26  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Don't encode ampersands in the source, but later in
	HTML rendering. Patch by Friedel Wolff.
	Fixes #565719.
