@@ -1,3 +1,8 @@
+2008-12-29  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* media/css/main.css:
+	* templates/vertimus/vertimus_detail.html: CSS adjustments.
+
 2008-12-29  Claude Paroz  <claude@2xlibre.net>
 
 	* vertimus/forms.py: Fix clean_file when there is no file.
